<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".NewTaskActivity" android:orientation="vertical" android:gravity="center">
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/title_field"
            android:inputType="text" android:hint="@string/title"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/subtitle_field"
            android:inputType="text" android:hint="@string/subtitle"
            android:importantForAutofill="no"
            android:singleLine="true" android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title_field" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/date_button" android:layout_margin="8dp"
            android:background="@drawable/button_background" android:textColor="@color/colorAccent"
            tools:layout_editor_absoluteX="27dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/subtitle_field"/>
    <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/type_image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/date_button">
        <RadioButton
                android:button="@null"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/event_button" android:layout_weight="1"
                android:background="@drawable/button_background"
                android:textColor="@color/colorAccent" android:buttonTint="@color/colorAccent"
                android:drawableBottom="@drawable/ic_more_vert_white_48dp" android:text="@string/event"
                android:layout_marginRight="8dp"/>
        <RadioButton
                android:button="@null"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/people_button" android:layout_weight="1"
                android:background="@drawable/button_background"
                android:textColor="@color/colorAccent" android:buttonTint="@color/colorAccent"
                android:drawableBottom="@drawable/ic_people_black_24dp" android:text="@string/people"
                android:layout_marginLeft="4dp" android:layout_marginRight="4dp"/>
        <RadioButton
                android:button="@null"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/shopping_button" android:layout_weight="1"
                android:background="@drawable/button_background"
                android:textColor="@color/colorAccent" android:buttonTint="@color/colorAccent"
                android:drawableBottom="@drawable/ic_shopping_cart_black_24dp" android:text="@string/shopping"
                android:layout_marginLeft="8dp"/>
    </RadioGroup>
    <Button
            android:text="@string/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/add_button"
            android:background="@drawable/button_background"
            android:textColor="@color/colorAccent" android:layout_margin="8dp"
            tools:layout_editor_absoluteX="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/type_image" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>