<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" app:srcCompat="@drawable/ic_mode_edit_white_24dp"
            android:id="@+id/addButton" app:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/linearLayout">
        <Button
                android:text="@string/by_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/byType" android:layout_weight="1"
                android:background="@drawable/button_background" android:textColor="@color/colorAccent"/>
        <Button
                android:text="@string/by_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/byName" android:layout_weight="1"
                android:background="@drawable/button_background" android:textColor="@color/colorAccent"
        />
        <Button
                android:text="@string/by_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/byTime" android:layout_weight="1"
                android:background="@drawable/button_background" android:textColor="@color/colorAccent"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/recycler" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" tools:listitem="@layout/list_item"
            android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:padding="14dp" android:hint="search"/>

</android.support.constraint.ConstraintLayout>